// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sdk/transferData > asset 'unit' from source 'Alphanet Relay' to destination 'Moonbase Alpha' > should get expected balances 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "alan" => _ChainAsset {
          "address": "0x9133c5a22024118804089f1fB752b7B2ce2a6351",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "alan",
          "min": undefined,
          "originSymbol": "ALAN",
          "symbol": undefined,
        },
        "ampe" => _ChainAsset {
          "address": "0xfFfFfffF7fee8415e1c2AC3A15C48D3546B95e16",
          "decimals": 12,
          "ids": {
            "id": "170050401128744171791743427490841452054",
          },
          "key": "ampe",
          "min": undefined,
          "originSymbol": "AMPE",
          "symbol": "xcAMPE",
        },
        "dev" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 3,
          },
          "key": "dev",
          "min": 10000000000000000n,
          "originSymbol": "DEV",
          "symbol": undefined,
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": "xcLIT",
        },
        "maos" => _ChainAsset {
          "address": "0xfFFffFFf06A14960bDdc8610d0E694D39A3C682e",
          "decimals": 18,
          "ids": {
            "id": "8812816049497534070792537960559175726",
            "palletInstance": 48,
          },
          "key": "maos",
          "min": undefined,
          "originSymbol": "MAOS",
          "symbol": "xcMAOS",
        },
        "otp" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "otp",
          "min": undefined,
          "originSymbol": "OTP",
          "symbol": "xcOTP",
        },
        "paring" => _ChainAsset {
          "address": "0xFFFffFfF8283448b3cB519Ca4732F2ddDC6A6165",
          "decimals": 18,
          "ids": {
            "id": "173481220575862801646329923366065693029",
          },
          "key": "paring",
          "min": undefined,
          "originSymbol": "PARING",
          "symbol": "xcPARING",
        },
        "pica" => _ChainAsset {
          "address": "0xFFFfFFFF10DD5Fd142163a40Ce0dae8c56e2801f",
          "decimals": 6,
          "ids": {
            "id": "22417088946346045371238623691600461855",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": "xcPICA",
        },
        "tt1" => _ChainAsset {
          "address": "0xfFffFfFf75976211C786fe4d73d2477e222786Ac",
          "decimals": 18,
          "ids": {
            "id": "156305701417244550631956600137082963628",
          },
          "key": "tt1",
          "min": undefined,
          "originSymbol": "TT1",
          "symbol": "xcTT1",
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": "xcTUR",
        },
        "unit" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
            "palletInstance": 48,
          },
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": "xcUNIT",
        },
        "ftmwh" => _ChainAsset {
          "address": "0x566c1cebc6A4AFa1C122E039C4BEBe77043148Ee",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "ftmwh",
          "min": undefined,
          "originSymbol": "FTM.wh",
          "symbol": "WFTM",
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": "xcHDX",
        },
        "usdcwh" => _ChainAsset {
          "address": "0xE5dE10C4b744bac6b783fAF8d9B9fDFF14Acc3c9",
          "decimals": 6,
          "ids": {
            "palletInstance": 48,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "USDC",
        },
        "agng" => _ChainAsset {
          "address": "0xFFfFFFFF38794F8c53fC7325ea07463dc6965e20",
          "decimals": 18,
          "ids": {
            "id": "75066649112131892397889252914026143264",
          },
          "key": "agng",
          "min": undefined,
          "originSymbol": "AGNG",
          "symbol": "xcAGNG",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "alphanet-relay",
      "explorer": {
        "base": "https://moonbase.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0x91bc6e169807aaa54802737e1c504b2577d4fafedd5a02c10293b1cd60e39527",
      "id": 1287,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": true,
      "key": "moonbase-alpha",
      "name": "Moonbase Alpha",
      "parachainId": 1000,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbase.moonbeam.network",
      "ss58Format": 1287,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbase.moonbeam.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 1280874711n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "min": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 0n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": undefined,
    "amount": 0n,
    "decimals": 12,
    "ids": undefined,
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "min": _AssetAmount {
    "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
    "amount": 1280874711n,
    "decimals": 12,
    "ids": {
      "id": "42259045809535163221576417993425387648",
      "palletInstance": 48,
    },
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": "xcUNIT",
  },
  "source": {
    "balance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _Parachain {
      "assets": Map {
        "unit" => _ChainAsset {
          "address": undefined,
          "decimals": 12,
          "ids": undefined,
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "ecosystem": "alphanet-relay",
      "explorer": undefined,
      "genesisHash": "0xe1ea3ab1d46ba8f4898b6b4b9c54ffc05282d299f89e84bd0fd08067758c9443",
      "isRelay": true,
      "isTestChain": true,
      "key": "alphanet-relay",
      "name": "Alphanet Relay",
      "parachainId": 0,
      "relayGenesisHash": undefined,
      "ss58Format": 42,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://services.api.moonbase.moonbeam.network/moonbase/relay",
        "wss://fro-moon-rpc-1-moonbase-relay-rpc-1.moonbase.ol-infra.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": undefined,
      "amount": 1280874711n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "destinationFeeBalance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "existentialDeposit": _AssetAmount {
      "address": undefined,
      "amount": 10000000000n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
  },
  "transfer": [Function],
}
`;

exports[`sdk/transferData > asset 'unit' from source 'Moonbase Alpha' to destination 'Alphanet Relay' > should get expected balances 1`] = `
{
  "destination": {
    "balance": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "chain": _Parachain {
      "assets": Map {
        "unit" => _ChainAsset {
          "address": undefined,
          "decimals": 12,
          "ids": undefined,
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": undefined,
        },
      },
      "checkSovereignAccountBalances": false,
      "ecosystem": "alphanet-relay",
      "explorer": undefined,
      "genesisHash": "0xe1ea3ab1d46ba8f4898b6b4b9c54ffc05282d299f89e84bd0fd08067758c9443",
      "isRelay": true,
      "isTestChain": true,
      "key": "alphanet-relay",
      "name": "Alphanet Relay",
      "parachainId": 0,
      "relayGenesisHash": undefined,
      "ss58Format": 42,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": undefined,
      "ws": [
        "wss://services.api.moonbase.moonbeam.network/moonbase/relay",
        "wss://fro-moon-rpc-1-moonbase-relay-rpc-1.moonbase.ol-infra.network",
      ],
    },
    "existentialDeposit": _AssetAmount {
      "address": undefined,
      "amount": 10000000000n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": undefined,
      "amount": 2773584905n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "min": _AssetAmount {
      "address": undefined,
      "amount": 0n,
      "decimals": 12,
      "ids": undefined,
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": undefined,
    },
    "sovereignAccountBalances": undefined,
  },
  "getEstimate": [Function],
  "max": _AssetAmount {
    "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
    "amount": 10000n,
    "decimals": 12,
    "ids": {
      "id": "42259045809535163221576417993425387648",
      "palletInstance": 48,
    },
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": "xcUNIT",
  },
  "min": _AssetAmount {
    "address": undefined,
    "amount": 12773584905n,
    "decimals": 12,
    "ids": undefined,
    "key": "unit",
    "min": undefined,
    "originSymbol": "Unit",
    "symbol": undefined,
  },
  "source": {
    "balance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "chain": _EvmParachain {
      "assets": Map {
        "alan" => _ChainAsset {
          "address": "0x9133c5a22024118804089f1fB752b7B2ce2a6351",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "alan",
          "min": undefined,
          "originSymbol": "ALAN",
          "symbol": undefined,
        },
        "ampe" => _ChainAsset {
          "address": "0xfFfFfffF7fee8415e1c2AC3A15C48D3546B95e16",
          "decimals": 12,
          "ids": {
            "id": "170050401128744171791743427490841452054",
          },
          "key": "ampe",
          "min": undefined,
          "originSymbol": "AMPE",
          "symbol": "xcAMPE",
        },
        "dev" => _ChainAsset {
          "address": "0x0000000000000000000000000000000000000802",
          "decimals": 18,
          "ids": {
            "palletInstance": 3,
          },
          "key": "dev",
          "min": 10000000000000000n,
          "originSymbol": "DEV",
          "symbol": undefined,
        },
        "lit" => _ChainAsset {
          "address": "0xfffFFfFF31103d490325BB0a8E40eF62e2F614C0",
          "decimals": 12,
          "ids": {
            "id": "65216491554813189869575508812319036608",
          },
          "key": "lit",
          "min": undefined,
          "originSymbol": "LIT",
          "symbol": "xcLIT",
        },
        "maos" => _ChainAsset {
          "address": "0xfFFffFFf06A14960bDdc8610d0E694D39A3C682e",
          "decimals": 18,
          "ids": {
            "id": "8812816049497534070792537960559175726",
            "palletInstance": 48,
          },
          "key": "maos",
          "min": undefined,
          "originSymbol": "MAOS",
          "symbol": "xcMAOS",
        },
        "otp" => _ChainAsset {
          "address": "0xFfffffFfB3229c8E7657eABEA704d5e75246e544",
          "decimals": 12,
          "ids": {
            "id": "238111524681612888331172110363070489924",
          },
          "key": "otp",
          "min": undefined,
          "originSymbol": "OTP",
          "symbol": "xcOTP",
        },
        "paring" => _ChainAsset {
          "address": "0xFFFffFfF8283448b3cB519Ca4732F2ddDC6A6165",
          "decimals": 18,
          "ids": {
            "id": "173481220575862801646329923366065693029",
          },
          "key": "paring",
          "min": undefined,
          "originSymbol": "PARING",
          "symbol": "xcPARING",
        },
        "pica" => _ChainAsset {
          "address": "0xFFFfFFFF10DD5Fd142163a40Ce0dae8c56e2801f",
          "decimals": 6,
          "ids": {
            "id": "22417088946346045371238623691600461855",
          },
          "key": "pica",
          "min": undefined,
          "originSymbol": "PICA",
          "symbol": "xcPICA",
        },
        "tt1" => _ChainAsset {
          "address": "0xfFffFfFf75976211C786fe4d73d2477e222786Ac",
          "decimals": 18,
          "ids": {
            "id": "156305701417244550631956600137082963628",
          },
          "key": "tt1",
          "min": undefined,
          "originSymbol": "TT1",
          "symbol": "xcTT1",
        },
        "tur" => _ChainAsset {
          "address": "0xfFffffFf6448d0746f2a66342B67ef9CAf89478E",
          "decimals": 10,
          "ids": {
            "id": "133300872918374599700079037156071917454",
          },
          "key": "tur",
          "min": undefined,
          "originSymbol": "TUR",
          "symbol": "xcTUR",
        },
        "unit" => _ChainAsset {
          "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
          "decimals": 12,
          "ids": {
            "id": "42259045809535163221576417993425387648",
            "palletInstance": 48,
          },
          "key": "unit",
          "min": undefined,
          "originSymbol": "Unit",
          "symbol": "xcUNIT",
        },
        "ftmwh" => _ChainAsset {
          "address": "0x566c1cebc6A4AFa1C122E039C4BEBe77043148Ee",
          "decimals": 18,
          "ids": {
            "palletInstance": 48,
          },
          "key": "ftmwh",
          "min": undefined,
          "originSymbol": "FTM.wh",
          "symbol": "WFTM",
        },
        "hdx" => _ChainAsset {
          "address": "0xFFFfFfff345Dc44DDAE98Df024Eb494321E73FcC",
          "decimals": 12,
          "ids": {
            "id": "69606720909260275826784788104880799692",
          },
          "key": "hdx",
          "min": undefined,
          "originSymbol": "HDX",
          "symbol": "xcHDX",
        },
        "usdcwh" => _ChainAsset {
          "address": "0xE5dE10C4b744bac6b783fAF8d9B9fDFF14Acc3c9",
          "decimals": 6,
          "ids": {
            "palletInstance": 48,
          },
          "key": "usdcwh",
          "min": undefined,
          "originSymbol": "USDC.Wh",
          "symbol": "USDC",
        },
        "agng" => _ChainAsset {
          "address": "0xFFfFFFFF38794F8c53fC7325ea07463dc6965e20",
          "decimals": 18,
          "ids": {
            "id": "75066649112131892397889252914026143264",
          },
          "key": "agng",
          "min": undefined,
          "originSymbol": "AGNG",
          "symbol": "xcAGNG",
        },
      },
      "checkSovereignAccountBalances": false,
      "contracts": undefined,
      "ecosystem": "alphanet-relay",
      "explorer": {
        "base": "https://moonbase.moonscan.io",
        "txPath": "/tx",
      },
      "genesisHash": "0x91bc6e169807aaa54802737e1c504b2577d4fafedd5a02c10293b1cd60e39527",
      "id": 1287,
      "isEvmSigner": true,
      "isRelay": false,
      "isTestChain": true,
      "key": "moonbase-alpha",
      "name": "Moonbase Alpha",
      "parachainId": 1000,
      "relayGenesisHash": undefined,
      "rpc": "https://rpc.api.moonbase.moonbeam.network",
      "ss58Format": 1287,
      "usesChainDecimals": false,
      "weight": undefined,
      "wh": {
        "name": "Moonbeam",
      },
      "ws": [
        "wss://wss.api.moonbase.moonbeam.network",
      ],
    },
    "destinationFee": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 2773584905n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "destinationFeeBalance": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "existentialDeposit": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 0n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "fee": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 8673687500000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "feeBalance": _AssetAmount {
      "address": "0x0000000000000000000000000000000000000802",
      "amount": 6543210000000000000n,
      "decimals": 18,
      "ids": {
        "palletInstance": 3,
      },
      "key": "dev",
      "min": 10000000000000000n,
      "originSymbol": "DEV",
      "symbol": undefined,
    },
    "max": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 10000n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
    "min": _AssetAmount {
      "address": "0xFfFFfFff1FcaCBd218EDc0EbA20Fc2308C778080",
      "amount": 0n,
      "decimals": 12,
      "ids": {
        "id": "42259045809535163221576417993425387648",
        "palletInstance": 48,
      },
      "key": "unit",
      "min": undefined,
      "originSymbol": "Unit",
      "symbol": "xcUNIT",
    },
  },
  "transfer": [Function],
}
`;
